# amplicon-tk

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile  requirements.txt
.github/workflows/: ci.yml
docs/: _quarto.yml  developer.qmd  examples.qmd  index.qmd
src/: amplicons.rs  cli.rs  filtering.rs  index.rs  io.rs  lib.rs  main.rs  per_record.rs  prelude.rs  primers.rs  reads.rs  record.rs  scratch.rs  trimming.rs
tests/: test_trimming_impl.rs
