[package]
name = "amplicon-tk"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nrminor/amplicon-tk"
homepage = "https://github.com/nrminor/amplicon-tk"
documentation = "https://github.com/nrminor/amplicon-tk/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "amplicon-tk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.3", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.3"
derive-new = "0.6.0"
itertools = "0.12.1"
noodles = { version = "0.77.0", features = ["fasta", "fastq", "bed", "async"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rayon = "1.9.0"
sccache = "0.8.1"
serde = { version = "1.0.203", features = ["serde_derive", "derive", "rc"] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[dev-dependencies]
pretty_assertions = "1"
biotest = { version = "0.2", features = [
    "fasta",
    "fastq",
    "sequence",
    "quality",
] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
