[package]
name = "amplicon-tk"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nrminor/amplicon-tk"
homepage = "https://github.com/nrminor/amplicon-tk"
documentation = "https://github.com/nrminor/amplicon-tk/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "amplicon-tk"
path = "src/main.rs"

[dependencies]
async-compression = { version = "0.4.11", features = ["all"] }
async-trait = "0.1.80"
bincode = "1.3.3"
block-aligner = { version = "0.5", features = ["simd_avx2", "simd_neon"] }
clap = { version = "4.4.3", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.3"
csv = "1.3.0"
derive-new = "0.6.0"
flate2 = "1.0.30"
futures = "0.3.30"
itertools = "0.12.1"
noodles = { version = "0.77.0", features = [
    "fasta",
    "fastq",
    "bed",
    "async",
    "bam",
    "bgzf",
    "cram",
    "sam",
    "core",
    "csi",
] }
pin-project-lite = "0.2.14"
pretty_assertions = "1"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
sccache = "0.8.1"
serde = { version = "1.0.203", features = ["serde_derive", "derive", "rc"] }
serde_cbor = "0.11.2"
sha2 = "0.10.8"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_avx2"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_neon"] }

[dev-dependencies]
biotest = { version = "0.2", features = [
    "fasta",
    "fastq",
    "sequence",
    "quality",
] }
pretty_assertions = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
